Add first workflow

--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -2,11 +2,16 @@ workflows:
   react-native:
     name: React Native App
     environment:
+      vars:
+          XCODE_WORKSPACE: "{{ADD WORKSPACE NAME HERE}}"
+          XCODE_SCHEME: "{{ADD SCHEME NAME HERE}}"
       node: latest
     scripts:
       - yarn install
-      - yarn android || echo "Android build failed, continuing..."
-      - yarn ios || echo "iOS build failed, continuing..."
+      - echo "sdk. dir=$HOME/programs/android-sdk-macosx" > "$FCI_BUILD_DIR/android/local-properties"
+      - |
+         # build Android
+         cd android
+         ./gradlew assembleRelease 
     artifacts:
       - android/app/build/outputs/**/*.apk
-      - ios/build/Build/Products/**/*.app
