--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,23 +1,21 @@
+# Check out https://docs.codemagic.io/yaml/building-a-react-native-app/ for more information
+# Please review and update values in curly braces
+
 workflows:
     react-native:
-        name: reactnativeappsigning
+        name: React Native App
         environment:
             vars:
-                XCODE_WORKSPACE: "{{ ADD WORKSPACE NAME HERE }}"
-                XCODE_SCHEME: "{{ ADD SCHEME NAME HERE }}"
+                XCODE_WORKSPACE: "FirstProject"
+                XCODE_SCHEME: "FirstProject"
             node: latest
         scripts:
             - npm install
-            - echo "sdk.dir=$ANDROID_SDK_ROOT" > "$CM_BUILD_DIR/android/local.properties"
+            - echo "sdk.dir=$HOME/programs/android-sdk-macosx" > "$FCI_BUILD_DIR/android/local.properties"
             - |
                 # build Android
                 cd android
                 ./gradlew assembleDebug
-            - |
-                # build iOS
-                cd ios
-                pod install
-                xcodebuild build -workspace "$XCODE_WORKSPACE.xcworkspace" -scheme "$XCODE_SCHEME" CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO CODE_SIGNING_ALLOWED=NO
+
         artifacts:
             - android/app/build/outputs/**/**/*.apk
-            - $HOME/Library/Developer/Xcode/DerivedData/**/Build/**/*.app
