--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,33 +1,21 @@
-# Check out https://docs.codemagic.io/yaml/building-a-react-native-app/ for more information
-# Please review and update values
-
 workflows:
-    react-native-android:
-        name: React Native Android
-        max_build_duration: 120
-        instance_type: mac_mini_m1
-        environment:
-          node: latest
-        scripts:
-            - name: Install yarn dependencies
-              script: |
-                yarn install
-            - name: Set Android SDK location
-              script: |
-                echo "sdk.dir=$ANDROID_SDK_ROOT" > "$CM_BUILD_DIR/android/local.properties"            
-            - name: Build Android release
-              script: |
-                LATEST_GOOGLE_PLAY_BUILD_NUMBER=$(google-play get-latest-build-number --package-name "$PACKAGE_NAME")
-                if [ -z LATEST_BUILD_NUMBER ]; then
-                  # fallback in case no build number was found from google play. Alternatively, you can `exit 1` to fail the build
-                  UPDATED_BUILD_NUMBER=$BUILD_NUMBER
-                else
-                  UPDATED_BUILD_NUMBER=$(($LATEST_GOOGLE_PLAY_BUILD_NUMBER + 1))
-                fi
-                cd android
-                ./gradlew bundleRelease \
-                  -PversionCode=$UPDATED_BUILD_NUMBER \
-                  -PversionName=1.0.$UPDATED_BUILD_NUMBER
-        artifacts:
-            - android/app/build/outputs/**/*.aab
-     
+  react-native:
+    name: React Native App
+    environment:
+      android_signing:
+        - keystore_reference
+      vars:
+        JAVA_HOME: "/usr/lib/jvm/zulu-17.jdk/Contents/Home"
+      node: latest
+    scripts:
+      - yarn install
+      - echo "sdk.dir=$HOME/programs/android-sdk-macosx" > "$FCI_BUILD_DIR/android/local.properties"
+      - |
+         # Verify Java version
+         java -version
+
+         # build Android
+         cd android
+         ./gradlew assembleRelease 
+    artifacts:
+      - android/app/build/outputs/**/*.apk
